# vehicle-insurance

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  demo.py  pyproject.toml  setup.py
.github/workflows/: aws.yaml
artifact/11_26_2025_17_52_48/data_ingestion/ingested/: test.csv
artifact/11_27_2025_15_45_30/data_ingestion/ingested/: test.csv  train.csv
artifact/11_27_2025_15_49_57/data_ingestion/ingested/: test.csv  train.csv
artifact/11_27_2025_19_51_31/data_ingestion/ingested/: test.csv  train.csv
artifact/11_27_2025_19_51_31/data_transformation/transformed/: test.npy
artifact/11_27_2025_19_51_31/data_transformation/transformed_object/: preprocessing.pkl
artifact/11_28_2025_19_31_07/data_ingestion/ingested/: test.csv  train.csv
artifact/11_28_2025_19_31_07/data_transformation/transformed/: test.npy
artifact/11_28_2025_19_31_07/data_transformation/transformed_object/: preprocessing.pkl
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
static/css/: style.css
static/js/: app.js
templates/: vehicledata.html
(+8 files in other folders)
