[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance"
version = "0.1.0"
authors = [
  {name="Suraj Khetre", email="khetres3636@gmail.com"}
]
description = "Vehicle Insurance ML End-to-End Pipeline"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]